<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <com.hjq.bar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/my_t01" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:background="#2E2E2E">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/info_t01"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical|right"
            android:textColor="@color/white"
            android:textSize="15sp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#575757"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#2E2E2E">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/info_t02"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/tv_moblie"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical|right"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#575757"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#2E2E2E">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/info_t03"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical|right"
            android:textColor="@color/white"
            android:textSize="15sp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#575757"/>

    <TextView
        android:id="@+id/tv_edit_pwd"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/info_t04"
        android:layout_marginTop="12dp"
        android:background="#2E2E2E"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableRight="@mipmap/shebei_btn_next"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#575757"/>

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/info_t05"
        android:background="#2E2E2E"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableRight="@mipmap/shebei_btn_next"/>



</LinearLayout>