<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/tv_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.noober.background.view.BLTextView
        android:id="@+id/register_tv"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:text="@string/cover_t01"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:bl_corners_radius="4dp"
        app:bl_solid_color="#999999"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <com.noober.background.view.BLTextView
        android:id="@+id/login_tv"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:text="@string/cover_t02"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:bl_corners_radius="4dp"
        app:bl_solid_color="#C6C6C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>